<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- 뒤로가기 버튼 -->
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_btn"
        app:layout_constraintBottom_toBottomOf="@id/back_btn_guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/back_btn_guideline_end"
        app:layout_constraintStart_toStartOf="@id/back_btn_guideline_start"
        app:layout_constraintTop_toTopOf="@id/back_btn_guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_btn_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.038" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_btn_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.059" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_btn_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.041" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_btn_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.086" />

    <!-- 장바구니 텍스트 -->
    <TextView
        android:id="@+id/store_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/shopping_basket"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/shopping_basket_guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/shopping_basket_guideline_end"
        app:layout_constraintStart_toStartOf="@id/shopping_basket_guideline_start"
        app:layout_constraintTop_toTopOf="@id/shopping_basket_guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shopping_basket_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shopping_basket_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.072" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shopping_basket_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shopping_basket_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <!-- 장바구니 버튼 -->
    <ImageView
        android:id="@+id/cart_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cart_btn"
        app:layout_constraintBottom_toBottomOf="@id/cart_image_guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/cart_image_guideline_end"
        app:layout_constraintStart_toStartOf="@id/cart_image_guideline_start"
        app:layout_constraintTop_toTopOf="@id/cart_image_guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_image_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.036" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_image_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.062" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_image_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.903" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_image_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.959" />

    <!-- 뷰 -->
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/view_guideline_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/view_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.083"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/view_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.085"/>

    <!-- 장바구니에 담은 메뉴 리스트 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shopping_basket_recyclerview"
        app:layout_constraintStart_toStartOf="@id/menu_list_guideline_start"
        app:layout_constraintEnd_toEndOf="@id/menu_list_guideline_end"
        app:layout_constraintTop_toTopOf="@id/menu_list_guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/menu_list_guideline_bottom"
        tools:listitem="@layout/shopping_basket_menulist_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_list_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.127"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_list_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.654"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_list_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_list_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.956"/>

    <!-- 메뉴 더 담으러가기 -->
    <TextView
        android:id="@+id/more_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/more_menu_guideline_start"
        app:layout_constraintEnd_toEndOf="@id/more_menu_guideline_end"
        app:layout_constraintTop_toTopOf="@id/more_menu_guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/more_menu_guideline_bottom"
        android:background="@drawable/more_menu"
        android:text="@string/more_menu"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/more_menu_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.654"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/more_menu_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.718"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/more_menu_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/more_menu_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.956"/>

    <!-- 주문하기 버튼 -->
    <Button
        android:id="@+id/order_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/order"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/order_btn_guideline_end"
        app:layout_constraintStart_toStartOf="@id/order_btn_guideline_start"
        app:layout_constraintTop_toTopOf="@id/order_btn_guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/order_btn_guideline_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/order_btn_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/order_btn_guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.885"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/order_btn_guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.044"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/order_btn_guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.956"/>

</androidx.constraintlayout.widget.ConstraintLayout>